--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,12 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+- task: SonarQubePrepare@4
+  inputs:
+    scannerMode: 'MSBuild'
+    projectKey: 'ConsoleApp40'
+    projectName: 'ConsoleApp40'
+
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
@@ -32,3 +38,9 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: SonarQubeAnalyze@4
+
+- task: SonarQubePublish@4
+  inputs:
+    pollingTimeoutSec: '300'
