Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
     scannerMode: 'MSBuild'
     projectKey: 'ConsoleApp40'
     projectName: 'ConsoleApp40'    
-    cliProjectKey: '''
+    cliProjectKey: ''
     cliSources: ''
     extraProperties: |
       # Additional properties that will be passed to the scanner, 
