--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,20 +24,20 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
-- task: SonarCloudPrepare@1
-  inputs:
-    SonarCloud: 'sonarcloud'
-    organization: 'budzow-github'
-    scannerMode: 'MSBuild'
-    projectKey: 'ConsoleApp40'
-    projectName: 'ConsoleApp40'    
-    cliProjectKey: ''
-    cliSources: ''
-    extraProperties: |
-      # Additional properties that will be passed to the scanner, 
-      # Put one key=value per line, example:
-      # sonar.exclusions=**/*.bin
-      sonar.verbose=true
+#- task: SonarCloudPrepare@1
+#  inputs:
+#    SonarCloud: 'sonarcloud'
+#    organization: 'budzow-github'
+#    scannerMode: 'MSBuild'
+#    projectKey: 'ConsoleApp40'
+#    projectName: 'ConsoleApp40'    
+#    cliProjectKey: ''
+#    cliSources: ''
+#    extraProperties: |
+#      # Additional properties that will be passed to the scanner, 
+#      # Put one key=value per line, example:
+#      # sonar.exclusions=**/*.bin
+#      sonar.verbose=true
 
 - task: VSBuild@1
   inputs:
@@ -51,11 +51,11 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
-- task: SonarCloudAnalyze@1
-
-- task: SonarCloudPublish@1
-  inputs:
-    pollingTimeoutSec: '300'
+#- task: SonarCloudAnalyze@1
+#
+#- task: SonarCloudPublish@1
+#  inputs:
+#    pollingTimeoutSec: '300'
 
 - task: CmdLine@2
   inputs:
